--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <script src="http://lib.sinaapp.com/js/jquery/1.9.1/jquery-1.9.1.min.js"></script>
-    <title>Asch DApp Example 1 - hello world</title>
+    <title>Crypto Currency Time</title>
 </head>
 
 <script type="text/javascript">
@@ -164,7 +164,7 @@
 </script>
 
 <body>
-    <h1>Asch DApp Example 1 - hello world</h1>
+    <h1>Crypto Currency Time</h1>
     <div>
         <input type="password" id="secretInput" placeholder="Please input master secret">
         <input type="button" value="Login" id="loginBtn">
