change contract args format

--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@
                 secret: UserInfo.secret,
                 fee: fee,
                 type: Number($('#contractOptions').val()),
-                args: args
+                args: JSON.stringify(args)
             }
             console.log('invoke', data)
             $.ajax({
